# jotter-cli

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conandata.yml  conanfile.py  default-config.json  requirements.txt
include/: Common.hpp  Config.hpp  ConfigFactory.hpp  Environment.hpp  FileSystem.hpp  Note.hpp  Params.hpp  Singleton.hpp  common.hpp  config.hpp  jotter.hpp  note.hpp  note_manager.hpp  params.hpp
include/interface/: ICommon.hpp  IEnvironment.hpp  IFileSystem.hpp
scripts/: build-and-install.sh  common.py  run-clang-format.py  run-clang-format.sh  run-clang-tidy.py  run-clang-tidy.sh
src/: Common.cpp  Config.cpp  Note.cpp  Params.cpp  common.cpp  config.cpp  jotter.cpp  main.cpp  note.cpp  note_manager.cpp  params.cpp
test/: CMakeLists.txt
test/mock/: MockEnvironment.hpp  MockFileSystem.hpp
test/src/: TestCommon.cpp  TestCommonWithMockFileSystem.cpp
tests/: CMakeLists.txt
tests/mocks/: MockEnvironment.hpp
tests/src/: TestCommon.cpp
